--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ hr {
 .header-details img {
     width: 90%;
     position: relative;
-    bottom: -115px;
+    bottom: -5px;
 }
 
 .header-animation img {
@@ -71,8 +71,8 @@ hr {
     height: 50px;
     position: relative;
     right: -200px;
-    bottom: -130px;
-    transition: transform 0.5s linear;
+    bottom: -20px;
+    transition: transform 0.5s ease;
 }
 
 .header-details:hover .header-animation img {
@@ -286,12 +286,12 @@ footer {
     }
 
     .header-details img {
-        bottom: -110px;
+        bottom: -60px;
     }
 
     .header-animation img {
         right: -100px;
-        bottom: -120px;
+        bottom: -70px;
     }
 
     main {
